Bug 814308 - MediaDecoder::SetDuration doesn't handle aDuration=inf correctly.  r=kinetik